--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "safesite-backend",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Backend API for Safesite project using Express and MongoDB",
   "main": "server.js",
+  "type": "module",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "start": "node server.js",
-    "vercel-build": "node server.js"
-  },
-  "engines": {
-    "node": "18.x"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "mongoose": "^8.19.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
